# ZapFeedReader

./: .clang-format  .gitignore  .gitmodules  ACKNOWLEDGEMENTS  CMakeLists.txt  README.md
client-desktop/: .gitignore  CMakeLists.txt
client-desktop/i18n/: ZapFeedReader_en_US.ts
client-desktop/include/: ClientGlobal.h  DialogAddFeed.h  DialogAddFolder.h  DialogEditScript.h  DialogImportOPML.h  DialogJumpToPage.h  DialogJumpToPostPage.h  DialogWithSourcesAndFolders.h  FeedIconCache.h  ItemDelegateEditScriptDialogSource.h  ItemDelegatePost.h  ItemDelegateSource.h  MainWindow.h  PopupFlagChooser.h  StandardItemModelSources.h  SyntaxHighlighterLua.h  TableViewLogs.h  TableViewPosts.h  TableViewScriptFolders.h  TableViewScripts.h  TreeViewEditScriptDialogSources.h  TreeViewSources.h  Utilities.h  WebEnginePagePost.h  WebEngineViewPost.h
client-desktop/include/delegates/: ItemDelegateDiscoveredFeed.h  ItemDelegateEditScriptDialogSource.h  ItemDelegateLog.h  ItemDelegatePost.h  ItemDelegateScript.h  ItemDelegateScriptFolder.h  ItemDelegateSource.h
client-desktop/include/dialogs/: DialogAddFeed.h  DialogAddFolder.h  DialogAddSource.h  DialogEditFolder.h  DialogEditScript.h  DialogEditScriptFolder.h  DialogImportOPML.h  DialogJumpToPage.h  DialogPreferences.h  DialogTestScriptEditEnclosure.h  DialogWithSourcesAndFolders.h
client-desktop/include/models/: SortFilterProxyModelSources.h  StandardItemModelSources.h
client-desktop/include/widgets/: ComboBoxWithPopupSignal.h  FrameFlagFilters.h  LabelPaletteCorrected.h  LineEditSearch.h  MainWindow.h  PopupFlagChooser.h  SearchWidget.h  TableViewLogs.h  TableViewPaletteCorrected.h  TableViewPostEnclosures.h  TableViewPosts.h  TableViewScriptFolders.h  TableViewScripts.h  TreeViewEditScriptDialogSources.h  TreeViewPaletteCorrected.h  TreeViewSources.h  WebEnginePagePost.h  WebEngineViewPost.h  WidgetPostCaption.h  WidgetPropertiesPaneFeed.h  WidgetPropertiesPaneFolder.h  WidgetPropertiesPaneSource.h
client-desktop/resources/: resources.qrc
client-desktop/src/: DialogAddFeed.cpp  DialogAddFeed.ui  DialogAddFolder.cpp  DialogEditScript.cpp  DialogEditScript.ui  DialogImportOPML.cpp  DialogImportOPML.ui  DialogJumpToPage.cpp  DialogJumpToPostPage.cpp  DialogJumpToPostPage.ui  DialogWithSourcesAndFolders.cpp  FeedIconCache.cpp  ItemDelegateEditScriptDialogSource.cpp  ItemDelegateLog.cpp  ItemDelegatePost.cpp  ItemDelegateScript.cpp  ItemDelegateSource.cpp  MainWindow-ScriptFolders.cpp  MainWindow-Scripts.cpp  MainWindow.cpp  MainWindow.ui  PopupFlagChooser.cpp  PopupFlagChooser.ui  StandardItemModelSources.cpp  SyntaxHighlighterLua.cpp  TableViewLogs.cpp  TableViewPaletteCorrected.cpp  TableViewPosts.cpp  TableViewScriptFolders.cpp  TableViewScripts.cpp  TreeViewEditScriptDialogSources.cpp  TreeViewPaletteCorrected.cpp  TreeViewSources.cpp  Utilities.cpp  WebEnginePagePost.cpp  WebEngineViewPost.cpp  main.cpp
client-desktop/src/delegates/: ItemDelegateDiscoveredFeed.cpp  ItemDelegateEditScriptDialogSource.cpp  ItemDelegateLog.cpp  ItemDelegatePost.cpp  ItemDelegateScript.cpp  ItemDelegateScriptFolder.cpp  ItemDelegateSource.cpp
client-desktop/src/dialogs/: DialogAddFeed.cpp  DialogAddFeed.ui  DialogAddFolder.cpp  DialogAddFolder.ui  DialogAddSource.cpp  DialogAddSource.ui  DialogEditFolder.cpp  DialogEditFolder.ui  DialogEditScript.cpp  DialogEditScript.ui  DialogEditScriptFolder.cpp  DialogEditScriptFolder.ui  DialogImportOPML.cpp  DialogImportOPML.ui  DialogJumpToPage.cpp  DialogJumpToPage.ui  (+5 more)
engine/: CMakeLists.txt
engine/include/: Agent.h  AgentAddFolder.h  AgentGetFeedPosts.h  AgentGetPosts.h  AgentGetSourcePosts.h  AgentMarkFeedRead.h  AgentMarkFolderRead.h  AgentMarkPostRead.h  AgentMarkPostUnread.h  AgentMarkSourceRead.h  AgentMoveFeed.h  AgentRefreshFeed.h  AgentRemoveFeed.h  AgentRemoveFolder.h  AgentRunnable.h  AgentSubscribeFeed.h  Database.h  FavIconParser.h  Feed.h  FeedAtom10.h  FeedFetcher.h  FeedLocal.h  FeedParser.h  FeedParserAtom10.h  FeedParserRSS20.h  FeedRSS20.h  Flag.h  Folder.h  FolderLocal.h  Global.h  Helpers.h  Log.h  OPMLParser.h  Post.h  ScriptFolder.h  ScriptFolderLocal.h  Source.h  SourceLocal.h
engine/src/: Agent.cpp  AgentAddFolder.cpp  AgentGetFeedPosts.cpp  AgentGetFolderPosts.cpp  AgentGetPost.cpp  AgentGetPosts.cpp  AgentGetSourcePosts.cpp  AgentMarkFeedRead.cpp  AgentMarkFolderRead.cpp  AgentMarkPostRead.cpp  AgentMarkPostUnread.cpp  AgentMarkSourceRead.cpp  AgentMoveFeed.cpp  AgentMoveFolder.cpp  AgentRefreshFeed.cpp  AgentRemoveFeed.cpp  AgentRemoveFolder.cpp  AgentRunnable.cpp  AgentSubscribeFeed.cpp  AutoRefresh.cpp  CMakeLists.txt  Database.cpp  FavIconParser.cpp  Feed.cpp  FeedATOM10.cpp  FeedDiscovery.cpp  FeedFetcher.cpp  FeedLocal.cpp  FeedParser.cpp  FeedParserATOM10.cpp  FeedParserRSS10.cpp  FeedParserRSS20.cpp  FeedRSS20.cpp  Flag.cpp  Folder.cpp  FolderLocal.cpp  Helpers.cpp  Log.cpp  OPMLParser.cpp  Post.cpp  (+8 more)
server/: CMakeLists.txt
server/helpers/: api-categories.json  api-dummyfeed.json  api-feeds.json  api-folders.json  api-generator.py  api-logs.json  api-posts.json  api-scriptfolders.json  api-scripts.json  api-sources.json  api.conf  api.json  zapfeedreader.conf.example
server/include/: API.h  APIErrors.h  APIHandlers.h  APIHandlers.h.tpl  APIRequest.h  APIRequest404Handler.h  APIRequestHandler.h  APIRequestHandlerFactory.h  Daemon.h  DummyFeed.h  Exceptions.h  HTTPServer.h  ServerGlobal.h
server/src/: API.cpp  APIRequest.cpp  APIRequest404Handler.cpp  APIRequestHandler.cpp  APIRequestHandlerFactory.cpp  APIRequestHandlerRegistration.cpp  APIRequestHandlerRegistration.cpp.tpl  CMakeLists.txt  CMakeLists.txt.tpl  Daemon.cpp  DummyFeed.cpp  HTTPServer.cpp  main.cpp
tests/: CMakeLists.txt
tests/engine/: CMakeLists.txt
tests/include/: DataFetcher.h  Listener.h
tests/input/: FeedATOM10CustomExample.xml  FeedATOM10DaringFireball.xml  FeedATOM10YouTubeCppweekly.xml  WebPageInvalidFeedMimeType.html
tests/src/: CMakeLists.txt  DataFetcher.cpp  Listener.cpp  TestDummy.cpp  TestFavIconParser.cpp  TestFeedDiscovery.cpp  TestFeedParsing.cpp  TestRemoteSource.cpp
(+535 files in other folders)
